# cv_tutorial

./: CMakeLists.txt  package.xml
scripts/: face_detection.py  face_detection_ros.py
src/: main_test.cpp
